--- a/account_payroll_ext/views/account_move_payroll.xml
+++ b/account_payroll_ext/views/account_move_payroll.xml
@@ -35,7 +35,7 @@
                         </div>
                         <group>
                             <group>
-                                
+                                <field name="employee_id" options="{'no_create': True, 'no_create_edit':True}"/>
                             </group>
                         </group>
                     </sheet>
