--- a/account_payroll_ext/views/account_move_payroll.xml
+++ b/account_payroll_ext/views/account_move_payroll.xml
@@ -20,7 +20,7 @@
             <field name="model">account.move.payroll</field>
             <field name="priority" eval="8" />
             <field name="arch" type="xml">
-                <form string="res_partner_zones_form">
+                <form>
                     <header>
                         <button 
                         name="generate_records_account_move"
