--- a/account_payroll_ext/views/account_move_payroll.xml
+++ b/account_payroll_ext/views/account_move_payroll.xml
@@ -43,7 +43,7 @@
                         </div>
                         <group>
                             <group>
-                                <field name="employee_id" options="{'no_create': True, 'no_create_edit':True}"/>
+                                <field name="employee_id" options="{'no_create': True, 'no_create_edit':True}" required="1"/>
                                 <field name="employee_name"/>
                             </group>
                         </group>
