--- a/account_payroll_ext/views/account_move_payroll.xml
+++ b/account_payroll_ext/views/account_move_payroll.xml
@@ -35,7 +35,7 @@
                                 <table>
                                     <tr>
                                         <td>
-                                            <field name="name" required="1" placeholder="Name"/>
+                                            <field name="name" placeholder="Name"/>
                                         </td>
                                     </tr>
                                 </table>
