--- a/account_payroll_ext/views/account_move_payroll.xml
+++ b/account_payroll_ext/views/account_move_payroll.xml
@@ -48,6 +48,7 @@
                             </group>
                             <group>
                                 <field name="code"/>
+                                <field name="project_id" options="{'no_create': True, 'no_create_edit':True}"/>
                             </group>
                         </group>
                     </sheet>
