--- a/account_payroll_ext/views/account_move_payroll.xml
+++ b/account_payroll_ext/views/account_move_payroll.xml
@@ -44,7 +44,7 @@
                         <group>
                             <group>
                                 <field name="employee_id" options="{'no_create': True, 'no_create_edit':True}" required="1"/>
-                                <field name="employee_name"/>
+                                <field name="employee_name" invisible="1"/>
                             </group>
                             <group>
                                 <field name="code"/>
