--- a/account_payroll_ext/views/account_move_payroll.xml
+++ b/account_payroll_ext/views/account_move_payroll.xml
@@ -10,6 +10,8 @@
             <field name="arch" type="xml">
                 <tree>
                     <field name="name"/>
+                    <field name="employee_id"/>
+                    <field name="project_id"/>
                 </tree>
             </field>
         </record>
