--- a/account_payroll_ext/views/account_move_payroll.xml
+++ b/account_payroll_ext/views/account_move_payroll.xml
@@ -70,10 +70,12 @@
             <search>
                 <field name="name"/>
                 <field name="code"/>
-                <field name="employee_id"/>                                                  
+                <field name="employee_id"/>
+                <field name="project_id"/>                                                
                 <filter string="name" domain="[('name', '!=', '')]" name="has_name"></filter>
                 <group expand="0" string="Group By">                                            
-                    <filter string="Employee" name="employee_id" context="{'group_by': 'employee_id'}"></filter>                                             
+                    <filter string="Employee" name="employee_id" context="{'group_by': 'employee_id'}"></filter>
+                    <filter string="Project BIM" name="project_id" context="{'group_by': 'project_id'}"></filter>                                             
                 </group>                                    
             </search>                                
           </field>                            
