--- a/account_payroll_ext/views/account_move_payroll.xml
+++ b/account_payroll_ext/views/account_move_payroll.xml
@@ -49,7 +49,7 @@
                                 <field name="employee_name" invisible="1"/>
                             </group>
                             <group>
-                                <field name="code"/>
+                                <field name="code" invisible="1"/>
                                 <field name="project_id" options="{'no_create': True, 'no_create_edit':True}"/>
                             </group>
                         </group>
