--- a/account_payroll_ext/views/account_move_payroll.xml
+++ b/account_payroll_ext/views/account_move_payroll.xml
@@ -24,6 +24,7 @@
             <field name="arch" type="xml">
                 <form>
                     <header>
+                        <field name="state" widget="statusbar"/>
                         <button 
                         name="generate_records_account_move"
                         string="GENERATE ACCOUNT MOVE"
