--- a/account_payroll_ext/views/account_move_payroll.xml
+++ b/account_payroll_ext/views/account_move_payroll.xml
@@ -32,6 +32,14 @@
                         class="oe_highlight"
                         confirm="Are you sure you want to do this?"
                         attrs="{'invisible': [('state', '!=', 'draft')]}"/>
+                        <div class="alert alert-danger" role="alert" style="margin-bottom:0px;" attrs="{'invisible': [('state', '!=', 'done')]}">
+                            This is from the sales team
+                           <bold>
+                               <a class="alert-link" role="button">
+                                   <field name="name" readonly="True"/>
+                               </a>
+                           </bold>
+                        </div>
                     </header>
                     <sheet>
                         <div class="oe_title">
@@ -56,6 +64,7 @@
                             </group>
                             <group>
                                  <field name="mjs"/>
+                                 <field name="is_done"/>
                             </group>
                             <group>
                                 
